Adjusted padding to ensure header does not overlap with page content

--- a/Public/css/header.css
+++ b/Public/css/header.css
@@ -17,7 +17,7 @@ header {
     color: #FCFCFD; /* almost white */
     padding: 10px 0;
     text-align: center;
-    position: fixed;
+    position: relative;
     top: 0;
     z-index: 1000;
 }
